Formatting the Document retrieval-Assignment

--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
@@ -1038,15 +1038,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "#Build a nearest neighbor model for document retrieval\n",
+    "# Build a nearest neighbor model for document retrieval\n",
     "\n",
     "We now create a nearest-neighbors model and apply it to document retrieval.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1067,19 +1066,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Applying the nearest-neighbors model for retrieval"
+    "# Applying the nearest-neighbors model for retrieval"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Who is closest to Obama?"
+    "## Who is closest to Obama?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -1088,12 +1087,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PROGRESS: Starting pairwise querying...\n",
+      "PROGRESS: Starting pairwise querying.\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n",
       "PROGRESS: | Query points | # Pairs | % Complete. | Elapsed Time |\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n",
-      "PROGRESS: | 0            | 1       | 0.00169288  | 18.87ms      |\n",
-      "PROGRESS: | Done         |         | 100         | 194.698ms    |\n",
+      "PROGRESS: | 0            | 1       | 0.00169288  | 16.295ms     |\n",
+      "PROGRESS: | Done         |         | 100         | 217.608ms    |\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n"
      ]
     },
@@ -1163,7 +1162,7 @@
        "[5 rows x 4 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
