Formatting Document retrieval -assignment python notebook

--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
@@ -1182,12 +1182,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Other examples of document retrieval"
+    "## Other examples of document retrieval"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1207,12 +1207,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PROGRESS: Starting pairwise querying...\n",
+      "PROGRESS: Starting pairwise querying.\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n",
       "PROGRESS: | Query points | # Pairs | % Complete. | Elapsed Time |\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n",
-      "PROGRESS: | 0            | 1       | 0.00169288  | 17.804ms     |\n",
-      "PROGRESS: | Done         |         | 100         | 135.698ms    |\n",
+      "PROGRESS: | 0            | 1       | 0.00169288  | 14.626ms     |\n",
+      "PROGRESS: | Done         |         | 100         | 210.687ms    |\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n"
      ]
     },
@@ -1282,7 +1282,7 @@
        "[5 rows x 4 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -1313,12 +1313,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PROGRESS: Starting pairwise querying...\n",
+      "PROGRESS: Starting pairwise querying.\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n",
       "PROGRESS: | Query points | # Pairs | % Complete. | Elapsed Time |\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n",
-      "PROGRESS: | 0            | 1       | 0.00169288  | 24.658ms     |\n",
-      "PROGRESS: | Done         |         | 100         | 149.909ms    |\n",
+      "PROGRESS: | 0            | 1       | 0.00169288  | 12.816ms     |\n",
+      "PROGRESS: | Done         |         | 100         | 204.868ms    |\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n"
      ]
     },
@@ -1388,7 +1388,7 @@
        "[5 rows x 4 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -1419,12 +1419,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PROGRESS: Starting pairwise querying...\n",
+      "PROGRESS: Starting pairwise querying.\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n",
       "PROGRESS: | Query points | # Pairs | % Complete. | Elapsed Time |\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n",
-      "PROGRESS: | 0            | 1       | 0.00169288  | 23.009ms     |\n",
-      "PROGRESS: | Done         |         | 100         | 151.716ms    |\n",
+      "PROGRESS: | 0            | 1       | 0.00169288  | 13.538ms     |\n",
+      "PROGRESS: | Done         |         | 100         | 227.99ms     |\n",
       "PROGRESS: +--------------+---------+-------------+--------------+\n"
      ]
     },
@@ -1494,7 +1494,7 @@
        "[5 rows x 4 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
